# Prism

./: .env  Cargo.toml  Dioxus.toml  README.md
.github/workflows/: release.yaml
assets/: styles.css
src/: app.rs  calc.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
