[package]
name = "prism"
version = "0.0.1"
description = "Prism launcher"
authors = ["you"]
edition = "2021"

[lib]
name = "prism_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
base64 = "0.22"
dirs = "5"
image = { version = "0.25", default-features = false, features = ["png"] }
arboard = "3"
chrono = "0.4"
reqwest = { version = "0.12", features = ["blocking", "json"] }
semver = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Graphics_Gdi",
  "Win32_System_Threading",
  "Win32_System_Com",
] }
